[gd_scene load_steps=13 format=3 uid="uid://w4oj3pplttv2"]

[ext_resource type="PackedScene" uid="uid://cwofqjj3naay8" path="res://cursor_disp.tscn" id="1_eqwvi"]
[ext_resource type="PackedScene" uid="uid://ddqlnd06ihvsg" path="res://unit_editor.tscn" id="2_54nfo"]
[ext_resource type="Script" path="res://team_saver.gd" id="3_rh304"]
[ext_resource type="Texture2D" uid="uid://b7sjwtul025ha" path="res://assets/confirmed.png" id="4_0qjsx"]
[ext_resource type="Texture2D" uid="uid://cxbs6hcltfqb3" path="res://assets/new.png" id="4_8pkot"]
[ext_resource type="Texture2D" uid="uid://le8hxlit864f" path="res://assets/caution.png" id="5_6lhdj"]
[ext_resource type="Texture2D" uid="uid://b7ixdgyyufl0r" path="res://assets/cancel.png" id="6_asgdx"]
[ext_resource type="TileSet" uid="uid://cc3shgi4yyt5c" path="res://main_map_tileset.tres" id="6_iknti"]
[ext_resource type="PackedScene" uid="uid://bo0i0rlvc8vl8" path="res://helper_modules/colors/palette_customizer.tscn" id="7_mrduk"]
[ext_resource type="Script" path="res://team_disp.gd" id="7_p2bgv"]
[ext_resource type="PackedScene" uid="uid://uece2td75dsj" path="res://cost_editor.tscn" id="8_ndbwt"]
[ext_resource type="PackedScene" uid="uid://dcr85ck7dw65h" path="res://team_starting_unit_selector.tscn" id="8_ym2by"]

[node name="unit_customizer" type="HBoxContainer"]
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="anchor" type="Node2D" parent="."]

[node name="cursor" parent="anchor" node_paths=PackedStringArray("map") instance=ExtResource("1_eqwvi")]
map = NodePath("../../team_save/r/TileMap")
input = -1

[node name="l" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="palette" type="PanelContainer" parent="l"]
layout_mode = 2
mouse_filter = 2

[node name="m" type="MarginContainer" parent="l/palette"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 3

[node name="PaletteCustomizer" parent="l/palette/m" instance=ExtResource("7_mrduk")]
layout_mode = 2
mouse_filter = 2

[node name="cost_editor" parent="l" instance=ExtResource("8_ndbwt")]
layout_mode = 2
size_flags_horizontal = 4
total_allowed = 5
individual_total_limit = 3

[node name="sel0" parent="l" instance=ExtResource("8_ym2by")]
layout_mode = 2

[node name="sel1" parent="l" instance=ExtResource("8_ym2by")]
layout_mode = 2
sel_index = 1

[node name="sel2" parent="l" instance=ExtResource("8_ym2by")]
layout_mode = 2
sel_index = 2

[node name="team_save" type="VBoxContainer" parent="." node_paths=PackedStringArray("palette_edit", "unit_edit", "cursor", "cost_edit")]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("3_rh304")
palette_edit = NodePath("../l/palette/m/PaletteCustomizer")
unit_edit = NodePath("../r/unit_edit")
cursor = NodePath("../anchor/cursor")
cost_edit = NodePath("../l/cost_editor")

[node name="title" type="HBoxContainer" parent="team_save"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="team" type="OptionButton" parent="team_save/title"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "+ New Team"
popup/item_0/id = 0

[node name="h" type="HBoxContainer" parent="team_save/title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="team_save/title/h"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Team Name"

[node name="m" type="PanelContainer" parent="team_save/title/h"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2

[node name="valid" type="TextureRect" parent="team_save/title/h/m"]
visible = false
modulate = Color(0.166667, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_0qjsx")
stretch_mode = 3

[node name="warning" type="TextureRect" parent="team_save/title/h/m"]
visible = false
modulate = Color(1, 0.55, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "This will override data already saved under the name \"\""
texture = ExtResource("5_6lhdj")
stretch_mode = 3

[node name="invalid" type="TextureRect" parent="team_save/title/h/m"]
modulate = Color(0.8, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Invalid team name."
texture = ExtResource("6_asgdx")
stretch_mode = 3

[node name="save" type="Button" parent="team_save/title"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
disabled = true
icon = ExtResource("4_8pkot")
expand_icon = true

[node name="r" type="MarginContainer" parent="team_save"]
custom_minimum_size = Vector2(368, 608)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TileMap" type="TileMap" parent="team_save/r"]
position = Vector2(8, 16)
tile_set = ExtResource("6_iknti")
format = 2
layer_0/tile_data = PackedInt32Array(131072, 0, 0, 131074, 0, 0, 131076, 0, 0, 131078, 0, 0, 262150, 0, 0, 262148, 0, 0, 262146, 0, 0, 262144, 0, 0, 393222, 0, 0, 393220, 0, 0, 393218, 0, 0, 393216, 0, 0, 0, 0, 0, 2, 0, 0, 4, 0, 0, 6, 0, 0, 524294, 0, 0, 524292, 0, 0, 524290, 0, 0, 524288, 0, 0)
script = ExtResource("7_p2bgv")

[node name="r" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(613, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2

[node name="unit_edit" parent="r" instance=ExtResource("2_54nfo")]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 2

[connection signal="complete" from="l/cost_editor" to="team_save" method="_on_cost_editor_complete"]
[connection signal="unit_selected" from="l/sel0" to="l/sel1" method="_on_sel_0_unit_selected"]
[connection signal="unit_selected" from="l/sel0" to="l/sel2" method="_on_sel_0_unit_selected"]
[connection signal="unit_selected" from="l/sel0" to="team_save" method="_on_sel_0_unit_selected"]
[connection signal="unit_selected" from="l/sel1" to="l/sel0" method="_on_sel_1_unit_selected"]
[connection signal="unit_selected" from="l/sel1" to="l/sel2" method="_on_sel_1_unit_selected"]
[connection signal="unit_selected" from="l/sel1" to="team_save" method="_on_sel_1_unit_selected"]
[connection signal="unit_selected" from="l/sel2" to="l/sel0" method="_on_sel_2_unit_selected"]
[connection signal="unit_selected" from="l/sel2" to="l/sel1" method="_on_sel_2_unit_selected"]
[connection signal="unit_selected" from="l/sel2" to="team_save" method="_on_sel_2_unit_selected"]
[connection signal="item_selected" from="team_save/title/team" to="team_save" method="_on_team_item_selected"]
[connection signal="focus_exited" from="team_save/title/h/LineEdit" to="team_save" method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="team_save/title/h/LineEdit" to="team_save" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="team_save/title/save" to="team_save" method="_on_save_pressed"]
[connection signal="do_recalc" from="team_save/r/TileMap" to="l/sel0" method="_on_tile_map_do_recalc"]
[connection signal="do_recalc" from="team_save/r/TileMap" to="l/sel1" method="_on_tile_map_do_recalc"]
[connection signal="do_recalc" from="team_save/r/TileMap" to="l/sel2" method="_on_tile_map_do_recalc"]
[connection signal="full_valid" from="team_save/r/TileMap" to="team_save" method="_on_tile_map_full_valid"]
[connection signal="select_unit" from="team_save/r/TileMap" to="r/unit_edit" method="_on_tile_map_select_unit"]
